# cpp_skeleton

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  README.md  bootstrap.py
example/: CMakeLists.txt
include/project_name/: project_name.hpp  test_header.hpp
include/project_name/component/: component_header.hpp
site/: CMakeLists.txt  Doxyfile.in
test/: CMakeLists.txt  test_b.cpp
test/component/: test_a.cpp
